# SPLN2025

./: README.md  SPLN2025.md
TPC1/: README.md  rm_duplicates.py
TPC2/: README.md  rm_duplicates.py  test.txt  test2.txt
TPC3/ftk/ftk/: README.md  pyproject.toml  pyproject.toml:Zone.Identifier
TPC3/ftk/ftk/ftk/: __main__.py  base.py
rm-dup-lines/: pyproject.toml
